2000-11-08  Mikhael Goikhman  <migo@homemail.com>

	* docs/FAQ:
	* fvwm/ConfigFvwmSetup:
	* fvwm/fvwm2.1:
	* sample.fvwmrc/system.fvwm2rc-sample-95:
	use new form alias names FvwmForm-Flavor

	* fvwm/modconf.c (DestroyModConfig):
	handle spaces propertly after DestroyModuleConfig with a new syntax

	* libs/Picture.c (GetSimpleColor):
	try to make "Cannot Parse Color " error message more meaningful

2000-11-05  Dan Espen  <dane@mk.telcordia.com>

	* tests/purify/purify.fvwm2rc: Add timestamping, my ModulePath.

2000-11-06  Mikhael Goikhman  <migo@homemail.com>

	* tests/purify/purify.fvwm2rc:
	many fixes to list here, try diff

2000-11-04  Dan Espen  <dane@mk.telcordia.com>

	* tests/purify/purify.fvwm2rc: Ran file thru conversion tool, misc
	fixes.  Changed to echo steps to log file.  Still needs work for
	new features.

2000-11-04  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/style.c (ProcessNewStyle):
	fixed incomplete IconFill style option

2000-11-01  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/style.c (merge_styles):
	restored a call to free_icon_boxes, since remove_icon_boxes_from_style
	causes icon boxes not to work

2000-10-29  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm:
	revised to be up to date

	* fvwm/fvwm.c (main, setVersionInfo):
	clean up in -version, it is now dumped to stdout as GNU suggests

	* fvwm/read.h:
	* fvwm/read.c (run_command_file, push_read_file, pop_read_file,
	get_current_read_file, get_current_read_dir):
	implemented read file stack, thus making it possible to implement $.,
	to fix an fvwm lock up on recursive read and some more

	* fvwm/module_interface.c (do_execute_module):
	use the new read.h interface function instead of the global variable

	* NEWS:
	* fvwm/fvwm2.1:
	* fvwm/functions.c (expand, expand_extended_var):
	implemented $. (the current Read directory, intended for specifying
	relative file resources), $[page.nx] and $[page.ny].

2000-10-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c: