@@ -526,11 +526,11 @@ Pixel GetSimpleColor(char *name)
   }
 
   if (is_illegal_rgb)
-    fprintf(stderr, "Illegal RGB format %s\n", name);
+    fprintf(stderr, "Illegal RGB format \"%s\"\n", name);
   else if (!XParseColor (Pdpy, Pcmap, name, &color))
-    fprintf(stderr, "Cannot parse color %s\n", name ? name : "<blank>");
+    fprintf(stderr, "Cannot parse color \"%s\"\n", name ? name : "<blank>");
   else if (!XAllocColor (Pdpy, Pcmap, &color))
-    fprintf(stderr, "Cannot allocate color %s\n", name);
+    fprintf(stderr, "Cannot allocate color \"%s\"\n", name);
   return color.pixel;
 }
 
